infra/k8s/events-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: events-bus-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: events-bus
  template: 
    metadata:
      labels:
        app: events-bus
    spec:
      containers:
        - name: events-bus
          image: masumomo/events-bus
---
apiVersion: v1
kind: Service 
metadata: 
  name: events-bus-srv
spec:
  type: ClusterIP
  selector: 
    app: events-bus
  ports: 
    - name: events-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
