infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec: 
  rules:
    - host: my-app.org
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-clusterip-src
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-clusterip-src
              servicePort: 4002
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-clusterip-src
              servicePort: 4003
          - path: /?(.*)
            backend:
              serviceName: client-clusterip-src
              servicePort: 3000
